# electrodynamics

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  edit_book.ipynb  formula sheet.html  genindex.html  intro.html  kspec.py  objects.inv  prf-prf.html  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: formula sheet.md
_sources/content/lecture_notes/: lecture1.ipynb  lecture2.ipynb
_sources/content/problems/: chapter1-problems.ipynb
_sources/content/references/: formula-sheet.ipynb
content/book/chapter01/: ch1-1.html  ch1-2 2.html  ch1-2.html  ch1-3.html  ch1-4.html  ch1-5.html  ch1-6.html  chapter-intro.html
content/book/chapter02/: ch2-1.html  ch2-2.html  ch2-3.html  ch2-4.html  ch2-5.html  chapter-intro.html
content/book/chapter03/: ch3-1.html  ch3-2 2.html  ch3-2.html  ch3-3.html  ch3-4.html  chapter-intro.html
content/book/chapter04/: ch4-1.html  ch4-2.html  ch4-3.html  ch4-4.html  chapter-intro.html
content/book/chapter05/: ch5-1.html  ch5-2.html  ch5-3.html  ch5-4.html  chapter-intro.html
content/book/chapter06/: ch6-1.html  ch6-2 2.html  ch6-2.html  ch6-3.html  ch6-4.html  chapter-intro.html
content/book/chapter07/: ch7-1.html  ch7-2.html  ch7-3.html  chapter-intro.html
content/lecture_notes/: lecture1.html  lecture2.html
content/problems/: chapter1-problems.html
content/references/: formula-sheet.html  reference-equations.html
electrodynamics/: _config.yml  _toc.yml  intro.md  myst.yml  scratch-work.ipynb
src/electrodynamics/: __init__.py  electrodynamics.py
tests/: test1.py
(+381 files in other folders)
