[project]
name = "electrodynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "none", email = "none@none.none" }
]
requires-python = ">=3.14"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=2.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "sphinx-proof>=0.4.0",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
